welcome.lessons.welcome.bat.bool2.In1To10.scala.error
in1To10:2: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
	if (n>=1 && n<=10 && outsideMode=false) {
                          ^in1To10:5: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
	if (n<=1 && outsideMode=true || n>=10 && outsideMode=true) {
                 ^